--- a/app_storefront_core/cartridge/scss/default/_responsive.scss
+++ b/app_storefront_core/cartridge/scss/default/_responsive.scss
@@ -230,11 +230,6 @@
 			}
 		}
 	}
-	.address-list li,
-	.payment-list li {
-		float: none;
-		width: auto;
-	}
 	.order-history-header button {
 		font-size: 1em;
 		padding: .25em;
